feat: add getByEmail method to UserService for retrieving users by email